--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "html-telegram-bot-api",
-  "description": "Now you can write Telegram bots in HTML.",
+  "name": "css-telegram-bot-api",
+  "description": "Now you can write Telegram bots in CSS.",
   "version": "0.2.7",
   "main": "src/index.js",
   "scripts": {
@@ -12,8 +12,10 @@
   "author": "Bannerets <save14@protonmail.com>",
   "license": "MIT",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.2",
     "commander": "^2.11.0",
+    "css": "^2.2.1",
+    "lodash.chunk": "^4.2.0",
+    "lodash.frompairs": "^4.0.1",
     "telegraf": "^3.15.3"
   },
   "devDependencies": {
@@ -34,8 +36,8 @@
     ".eslintrc.json"
   ],
   "bin": {
-    "html-telegram-bot": "bin/html-telegram-bot",
-    "html-telegram-bot-api": "bin/html-telegram-bot-api"
+    "css-telegram-bot": "bin/css-telegram-bot",
+    "css-telegram-bot-api": "bin/css-telegram-bot-api"
   },
   "directories": {
     "example": "examples"
@@ -50,14 +52,14 @@
     "bot-api",
     "bot api",
     "tg",
-    "html"
+    "css"
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Bannerets/html-telegram-bot-api.git"
+    "url": "git+https://github.com/Bannerets/css-telegram-bot-api.git"
   },
   "bugs": {
-    "url": "https://github.com/Bannerets/html-telegram-bot-api/issues"
+    "url": "https://github.com/Bannerets/css-telegram-bot-api/issues"
   },
-  "homepage": "https://github.com/Bannerets/html-telegram-bot-api#readme"
+  "homepage": "https://github.com/Bannerets/css-telegram-bot-api#readme"
 }
