--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "commander": "^2.11.0",
     "css": "^2.2.1",
+    "html-telegram-bot-api": "^0.2.7",
     "lodash.chunk": "^4.2.0",
     "lodash.frompairs": "^4.0.1",
     "telegraf": "^3.15.3"
