--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "commander": "^2.11.0",
     "css": "^2.2.1",
+    "css-list-helpers": "^1.0.1",
     "html-telegram-bot-api": "^0.2.7",
     "lodash.chunk": "^4.2.0",
     "lodash.frompairs": "^4.0.1",
-    "telegraf": "^3.15.3"
+    "telegraf": "^3.15.3",
+    "unquote": "^1.1.1"
   },
   "devDependencies": {
     "eslint": "^4.10.0",
